--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,8 @@
-import ggwave
-import pyaudio
-import threading
-import time
-from gtts import gTTS
-import io
-import pygame
-from playsound import playsound
-import tempfile
-from llm_class import ai2ai
-import streamlit as st
-from traceback import TracebackException
-from llm_class import ai2ai
-from sound2text import MyAIAgent
-import threading
-import concurrent.futures
-import time
-from openai import AzureOpenAI
+ggwave
+pyaudio
+gtts
+pygame
+playsound
+tempfile
+streamlit
+openai
